crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_element__coffee_definitions.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
assertion_line: 1150
expression: bundle
---
{
  "request": {
    "id": "<UUID>",
    "uri": "<BOOK>/examples/coffee-machine/definitions.sysml"
  },
  "response": {
    "id": "<UUID>",
    "kind": "ItemDefinition",
    "name": "BrewedCoffee",
    "name_span": {
      "col": 13,
      "end": 609,
      "file":"<FILE>",
      "line": 18,
      "start": 597
    },
    "owner": "<UUID>",
    "owning_membership": "<UUID>",
    "spans": [
      {
        "col": 4,
        "end": 610,
        "file":"<FILE>",
        "line": 18,
        "start": 588
      }
    ]
  }
}
