crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_element__coffee_views.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
assertion_line: 1150
expression: bundle
---
{
  "request": {
    "id": "<UUID>",
    "uri": "<BOOK>/examples/coffee-machine/views.sysml"
  },
  "response": {
    "id": "<UUID>",
    "kind": "ViewDefinition",
    "name": "BrewSequenceView",
    "name_span": {
      "col": 13,
      "end": 6627,
      "file":"<FILE>",
      "line": 123,
      "start": 6611
    },
    "owner": "<UUID>",
    "owning_membership": "<UUID>",
    "spans": [
      {
        "col": 4,
        "end": 6740,
        "file":"<FILE>",
        "line": 123,
        "start": 6602
      }
    ]
  }
}
