crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_element__espresso_pump.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
assertion_line: 1150
expression: bundle
---
{
  "request": {
    "id": "<UUID>",
    "uri": "<WS>/examples/espresso-pump-hybrid/Physics/PumpODE.sysml"
  },
  "response": {
    "id": "<UUID>",
    "kind": "CalculationDefinition",
    "name": "AccumulatorDerivative",
    "name_span": {
      "col": 21,
      "end": 6709,
      "file":"<FILE>",
      "line": 113,
      "start": 6688
    },
    "owner": "<UUID>",
    "owning_membership": "<UUID>",
    "spans": [
      {
        "col": 12,
        "end": 6927,
        "file":"<FILE>",
        "line": 113,
        "start": 6679
      }
    ]
  }
}
